Functioning build but could fail at runtime